--- a/style.css
+++ b/style.css
@@ -2,30 +2,61 @@ body {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin: 400px;
+    /*margin: 400px;*/
     background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+    height: 100vh;
+    overflow: hidden;
 
 }
 
 
 #button {
-    background: url(/search-icon.png) no-repeat;
-    width: 40px;
-    height: 40px;
-    padding: 5px;
+    background-image: url("icons8-search-48.png");
+    border: 0;
+    font-size: 24px;
+    position: absolute;
+    top: 1;
+    left: 1;
+    height: 50px;
+    width: 50px;
+
+}
+.button{
+    border-bottom-right-radius:5px ;
+    border-top-right-radius:5px;
+}
+.active{
     border-radius: 5px;
-    border-color: lavender;
-    flex: 1;
+
+
+
+}
+#button:focus {
+    outline: 0;
 }
 
-#input {
-    float: end;
-    width: 100%;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    flex: 1;
+.input:focus{
+    outline:0 ;
+}
+
+.container .input {
+    background-color: #f0ebeb;
+    border: 0;
+    border-bottom-left-radius:5px ;
+    border-top-left-radius:5px ;
+    font-size: 18px;
+    padding: 15px;
+    height: 20px;
+    width: 300px;
+    transition: width 3000ms;
+
+
+}
+
+.container {
+    position: relative;
+    height: 50px;
+
+
 }
 
