--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     /*margin: 400px;*/
-    background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+    background-image: linear-gradient(#fff,#6fa0ed);
     height: 100vh;
     overflow: hidden;
 
